@@ -551,6 +551,13 @@ span.health-bubble {
   width: 10px;
   height: 10px;
 }
+
+.master {
+  display: inline-block;
+  background-color: #428bca;
+  height: 10px;
+  width: 10px;
+}
 //
 // Mixins
 // --------------------------------------------------
