@@ -5,6 +5,8 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - Label the master node in the cluster node list.
+
 2015/12/15 0.17.0
 =================
 
